--- a/spring-boot-heroku-demo/src/main/resources/application.properties
+++ b/spring-boot-heroku-demo/src/main/resources/application.properties
@@ -6,3 +6,10 @@
 #spring.datasource.username=spring-boot-heroku-example
 #spring.datasource.password=spring-boot-heroku-example
 #spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url= postgres://cjujzzgliugoer:yIn6d7J-hbfFTN_aEO0kt1rAKm@ec2-54-243-63-130.compute-1.amazonaws.com:5432/dc8bq9oiqbg52b
+spring.datasource.username=cjujzzgliugoer
+spring.datasource.password=yIn6d7J-hbfFTN_aEO0kt1rAKm
+spring.jpa.hibernate.ddl-auto=create-drop
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialectd
